<resources>
    <string name="app_name">OpenFakeGPS</string>
    <string name="server_host">Server Host</string>
    <string name="server_port">Server Port</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connected">Connected</string>
    <string name="status_connecting">Connecting\u2026</string>
    <string name="no_simulation">No simulation assigned</string>
    <string name="notification_channel">GPS Simulation</string>
    <string name="notification_title">GPS Simulation Active</string>
    <string name="notification_text">Simulating GPS location</string>
    <string name="agent_id_label">Agent ID</string>
    <string name="location_label">Location</string>
    <string name="speed_label">Speed</string>
    <string name="bearing_label">Bearing</string>
    <string name="simulation_label">Simulation</string>
    <string name="setup_title">Setup</string>
    <string name="permission_location">Location Permission</string>
    <string name="permission_notifications">Notification Permission</string>
    <string name="permission_mock_location">Mock Location App</string>
    <string name="status_granted">Granted</string>
    <string name="status_denied">Denied</string>
    <string name="status_not_selected">Not selected</string>
    <string name="status_selected">Selected</string>
    <string name="open_dev_options">Open Developer Options</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="setup_ready">All set! Ready to connect.</string>
    <string name="mock_location_hint">Go to Developer Options > Select mock location app > Choose OpenFakeGPS</string>
</resources>
